# etoa-gui

./: .editorconfig  .env  .gitignore  .php-cs-fixer.php  AUTHORS  CMakeLists.txt  ChangeLog  Changelog.md  Changelog_public.md  Doxyfile  FleetHandler.h  INSTALL  INSTALL.md  INSTALLL  INSTALLL.md  LICENSE  LICENSE.md  Makefile  README  README.md  RELEASING.md  SConstruct  THANKS  Vagrantfile  bootstrap.inc.php  box.php  chatframe.php  circle.yml  classes.php  cleancmake  composer.json  conf.inc.php  conf.inc.php.test  def.inc.php  example.conf.inc.php  fleethandler.cpp  functions.php  general.css  global.inc.php  img_popup.php  (+21 more)
src/: CMakeLists.txt  EventHandler.h  Kernel.php  MysqlHandler.h  app.php  etoa.cpp  etoa.h  main.cpp  minimalapp.php  version.h  version.php
src/Admin/: AdminNote.php  AdminNotesRepository.php  AdminRoleManager.php  AdminSessionCount.php  AdminSessionLog.php  AdminSessionManager.php  AdminSessionRepository.php  AdminUser.php  AdminUserRepository.php  AdminUserServiceProvider.php  AllianceBoardAvatar.php  LegacyTemplateTitleHelper.php
src/Alliance/: Alliance.php  AllianceApplication.php  AllianceApplicationRepository.php  AllianceBoardRepository.php  AllianceBuildList.php  AllianceBuildListItem.php  AllianceBuildListRepository.php  AllianceBuilding.php  AllianceBuildingCooldownRepository.php  AllianceBuildingRepository.php  AllianceDiplomacy.php  AllianceDiplomacyLevel.php  AllianceDiplomacyPoints.php  AllianceDiplomacyRepository.php  AllianceDiplomacySearch.php  AllianceHistoryRepository.php  AllianceImageStorage.php  AllianceItemRequirementStatus.php  AllianceManagementService.php  AllianceMember.php  AllianceMemberCosts.php  AllianceNews.php  AllianceNewsRepository.php  AlliancePaymentRepository.php  AlliancePointRepository.php  AlliancePoints.php  AlliancePointsRepository.php  AlliancePoll.php  AlliancePollRepository.php  AllianceRank.php  AllianceRankRepository.php  AllianceRepository.php  AllianceRight.php  AllianceRightRepository.php  AllianceRights.php  AllianceSearch.php  AllianceService.php  AllianceServiceProvider.php  AllianceShipPointsService.php  AllianceSpend.php  (+17 more)
src/Backend/: BackendMessageRepository.php  BackendServiceProvider.php  EventHandlerManager.php
src/Bookmark/: Bookmark.php  BookmarkEntity.php  BookmarkOrder.php  BookmarkRepository.php  BookmarkService.php  BookmarkServiceProvider.php  FleetBookmark.php  FleetBookmarkRepository.php
src/BuddyList/: BuddyListRepository.php  BuddyListServiceProvider.php  PendingBuddyRequest.php
src/Building/: BuidingServiceProvider.php  BuildListRepository.php  Building.php  BuildingBuildType.php  BuildingCostCalculator.php  BuildingCostContext.php  BuildingDataRepository.php  BuildingId.php  BuildingListItem.php  BuildingListItemRepository.php  BuildingListItemSearch.php  BuildingPeopleStorage.php  BuildingPoint.php  BuildingPointRepository.php  BuildingRepository.php  BuildingRequirementRepository.php  BuildingSearch.php  BuildingService.php  BuildingServiceProvider.php  BuildingSort.php  BuildingTypeDataRepository.php  BuildingTypeId.php  BuildingWorkplace.php  PeopleWorking.php
src/Chat/: ChatBan.php  ChatBanRepository.php  ChatLog.php  ChatLogRepository.php  ChatLogSearch.php  ChatManager.php  ChatMessage.php  ChatRepository.php  ChatServiceProvider.php  ChatUser.php  ChatUserRepository.php
src/Command/: CronjobRunCommand.php  DatabaseBackupCommand.php  DatabaseCheckCommand.php  DatabaseMigrateCommand.php  DatabaseRepairCommand.php  DatabaseRestoreCommand.php
src/Components/: AlertComponent.php  BreadcrumbsComponent.php
src/Controller/: AbstractLegacyController.php  AbstractLegacyShowController.php  ChatController.php  LegacyAdminController.php  LegacyIndexController.php  LegacyShowController.php  LuckyController.php  QuestController.php  RaceController.php  ShipController.php  TutorialController.php
src/Core/: AbstractRepository.php  AppName.php  DoctrineServiceProvider.php  LockServiceProvider.php  MonologServiceProvider.php  ObjectWithImage.php  ParamConverterListener.php  ParamConverterServiceProvider.php  SessionServiceProvider.php  SqlLogger.php  TokenContext.php  TwigServiceProvider.php  UtilServiceProvider.php
src/DefaultItem/: DefaultItem.php  DefaultItemRepository.php  DefaultItemSet.php  DefaultItemSetRepository.php
src/Defense/: AdminDefenseListItem.php  AdminDefenseQueueItem.php  Defense.php  DefenseBuildType.php  DefenseCategory.php  DefenseCategoryRepository.php  DefenseDataRepository.php  DefenseListItem.php  DefenseListSearch.php  DefenseQueueItem.php  DefenseQueueRepository.php  DefenseQueueSearch.php  DefenseRepository.php  DefenseRequirementRepository.php  DefenseSearch.php  DefenseServiceProvider.php  DefenseSort.php
src/Design/: DesignService.php  DesignsService.php
src/Entity/: AccessLog.php  AdminUser.php  Alliance.php  AllianceBuildListItem.php  AllianceBuilding.php  AllianceBuildingCooldown.php  AllianceNews.php  AllianceTechnology.php  AllianceTechnologyListItem.php  Asteroid.php  BattleLog.php  Buddy.php  Building.php  BuildingListItem.php  BuildingPoint.php  BuildingType.php  Cell.php  Chat.php  ChatBan.php  ChatLog.php  Config.php  DebrisLog.php  DefaultItemSet.php  Defense.php  DefenseListItem.php  DefenseQueueItem.php  EmptySpace.php  Entity.php  Fleet.php  FleetLog.php  Log.php  (+54 more)
(+4201 files in other folders)
