PROJECT(EtoABackend)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH    ${PROJECT_SOURCE_DIR}/bin/lib)

SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O3 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -Wall -g -ggdb")


FIND_PACKAGE(Boost REQUIRED thread)
FIND_PACKAGE(Mysqlpp)

LINK_DIRECTORIES(
  ${Boost_LIBRARY_DIRS}
  ${MYSQLPP_LIBRARY}
)

INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${MYSQLPP_INCLUDE_DIR}
)


ADD_SUBDIRECTORY(src)

SET(CMAKE_INSTALL_PREFIX "/usr/local/bin")

EXEC_PROGRAM(svn 
	ARGS log > ChangeLog
)



